[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jinns"]

[tool.setuptools_scm]
[project]
name = "jinns"
dynamic = ["version"]
description = "Physics Informed Neural Network with JAX"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
keywords = []
authors = [
  {name = "Hugo Gangloff", email = "hugo.gangloff@inrae.fr"},
  {name = "Nicolas Jouvin", email = "nicolas.jouvin@inrae.fr"},
]
maintainers = [
  {name = "Hugo Gangloff", email = "hugo.gangloff@inrae.fr"},
  {name = "Nicolas Jouvin", email = "nicolas.jouvin@inrae.fr"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = ["numpy", "jax", "jaxopt", "optax", "equinox>0.11.3", "jax-tqdm", "diffrax", "matplotlib"]

[project.optional-dependencies]
notebook = ["jupyter", "seaborn"]

[project.urls]
Repository = "https://gitlab.com/mia_jinns/jinns"
Documentation = "https://mia_jinns.gitlab.io/jinns/index.html"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    # A pragma comment that excludes an entire file:
    "\\A(?s:.*# pragma: exclude file.*)\\Z",
    ]
